lab5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> <empty>
Rule 4     instruction -> { instructions }
Rule 5     instruction -> BREAK ;
Rule 6     instruction -> CONTINUE ;
Rule 7     instruction -> assignment ;
Rule 8     instruction -> instruction_if
Rule 9     instruction -> instruction_loop
Rule 10    instruction -> instruction_print ;
Rule 11    instruction -> instruction_return ;
Rule 12    assignment -> identifier = operations
Rule 13    assignment -> identifier ADDITION_ASSIGN operations
Rule 14    assignment -> identifier MULTIPLICATION_ASSIGN operations
Rule 15    assignment -> identifier SUBTRACTION_ASSIGN operations
Rule 16    assignment -> identifier DIVISION_ASSIGN operations
Rule 17    instruction_if -> IF ( condition ) instruction
Rule 18    instruction_if -> IF ( condition ) instruction ELSE instruction
Rule 19    instruction_loop -> FOR identifier = operations : operations instruction
Rule 20    instruction_loop -> WHILE ( condition ) instruction
Rule 21    instruction_print -> PRINT operations_list
Rule 22    instruction_return -> RETURN operations
Rule 23    instruction_return -> RETURN
Rule 24    condition -> operations
Rule 25    operations -> ( operations )
Rule 26    operations -> operations + operations
Rule 27    operations -> operations - operations
Rule 28    operations -> operations * operations
Rule 29    operations -> operations / operations
Rule 30    operations -> operations > operations
Rule 31    operations -> operations < operations
Rule 32    operations -> operations GREATER_OR_EQUAL operations
Rule 33    operations -> operations LESS_OR_EQUAL operations
Rule 34    operations -> operations NOT_EQUAL operations
Rule 35    operations -> operations EQUAL operations
Rule 36    operations -> operations PLUS_MATRIX operations
Rule 37    operations -> operations MINUS_MATRIX operations
Rule 38    operations -> operations MULTIPLY_MATRIX operations
Rule 39    operations -> operations DIVIDE_MATRIX operations
Rule 40    operations -> operations '
Rule 41    operations -> array
Rule 42    operations -> value
Rule 43    operations -> - operations
Rule 44    value -> FLOAT
Rule 45    value -> INT
Rule 46    value -> STRING
Rule 47    value -> ZEROS ( operations_list )
Rule 48    value -> ONES ( operations_list )
Rule 49    value -> EYE ( operations_list )
Rule 50    value -> identifier
Rule 51    identifier -> ID
Rule 52    identifier -> ID [ operations_list ]
Rule 53    array -> [ operations_list ]
Rule 54    operations_list -> operations_list , operations
Rule 55    operations_list -> operations

Terminals, with rules where they appear

'                    : 40
(                    : 17 18 20 25 47 48 49
)                    : 17 18 20 25 47 48 49
*                    : 28
+                    : 26
,                    : 54
-                    : 27 43
/                    : 29
:                    : 19
;                    : 5 6 7 10 11
<                    : 31
=                    : 12 19
>                    : 30
ADDITION_ASSIGN      : 13
BREAK                : 5
CONTINUE             : 6
DIVIDE_MATRIX        : 39
DIVISION_ASSIGN      : 16
ELSE                 : 18
EQUAL                : 35
EYE                  : 49
FLOAT                : 44
FOR                  : 19
GREATER_OR_EQUAL     : 32
ID                   : 51 52
IF                   : 17 18
INT                  : 45
LESS_OR_EQUAL        : 33
MINUS_MATRIX         : 37
MULTIPLICATION_ASSIGN : 14
MULTIPLY_MATRIX      : 38
NOT_EQUAL            : 34
ONES                 : 48
PLUS_MATRIX          : 36
PRINT                : 21
RETURN               : 22 23
STRING               : 46
SUBTRACTION_ASSIGN   : 15
WHILE                : 20
ZEROS                : 47
[                    : 52 53
]                    : 52 53
error                : 
{                    : 4
}                    : 4

Nonterminals, with rules where they appear

array                : 41
assignment           : 7
condition            : 17 18 20
identifier           : 12 13 14 15 16 19 50
instruction          : 2 17 18 18 19 20
instruction_if       : 8
instruction_loop     : 9
instruction_print    : 10
instruction_return   : 11
instructions         : 1 2 4
operations           : 12 13 14 15 16 19 19 22 24 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 43 54 55
operations_list      : 21 47 48 49 52 53 54
program              : 0
value                : 42

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> .

    {               reduce using rule 3 (instructions -> .)
    BREAK           reduce using rule 3 (instructions -> .)
    CONTINUE        reduce using rule 3 (instructions -> .)
    IF              reduce using rule 3 (instructions -> .)
    FOR             reduce using rule 3 (instructions -> .)
    WHILE           reduce using rule 3 (instructions -> .)
    PRINT           reduce using rule 3 (instructions -> .)
    RETURN          reduce using rule 3 (instructions -> .)
    ID              reduce using rule 3 (instructions -> .)
    $end            reduce using rule 3 (instructions -> .)

    program                        shift and go to state 1
    instructions                   shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . { instructions }
    (5) instruction -> . BREAK ;
    (6) instruction -> . CONTINUE ;
    (7) instruction -> . assignment ;
    (8) instruction -> . instruction_if
    (9) instruction -> . instruction_loop
    (10) instruction -> . instruction_print ;
    (11) instruction -> . instruction_return ;
    (12) assignment -> . identifier = operations
    (13) assignment -> . identifier ADDITION_ASSIGN operations
    (14) assignment -> . identifier MULTIPLICATION_ASSIGN operations
    (15) assignment -> . identifier SUBTRACTION_ASSIGN operations
    (16) assignment -> . identifier DIVISION_ASSIGN operations
    (17) instruction_if -> . IF ( condition ) instruction
    (18) instruction_if -> . IF ( condition ) instruction ELSE instruction
    (19) instruction_loop -> . FOR identifier = operations : operations instruction
    (20) instruction_loop -> . WHILE ( condition ) instruction
    (21) instruction_print -> . PRINT operations_list
    (22) instruction_return -> . RETURN operations
    (23) instruction_return -> . RETURN
    (51) identifier -> . ID
    (52) identifier -> . ID [ operations_list ]

    $end            reduce using rule 1 (program -> instructions .)
    {               shift and go to state 4
    BREAK           shift and go to state 5
    CONTINUE        shift and go to state 6
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 17
    ID              shift and go to state 18

    instruction                    shift and go to state 3
    assignment                     shift and go to state 7
    instruction_if                 shift and go to state 8
    instruction_loop               shift and go to state 9
    instruction_print              shift and go to state 10
    instruction_return             shift and go to state 11
    identifier                     shift and go to state 12

state 3

    (2) instructions -> instructions instruction .

    {               reduce using rule 2 (instructions -> instructions instruction .)
    BREAK           reduce using rule 2 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 2 (instructions -> instructions instruction .)
    IF              reduce using rule 2 (instructions -> instructions instruction .)
    FOR             reduce using rule 2 (instructions -> instructions instruction .)
    WHILE           reduce using rule 2 (instructions -> instructions instruction .)
    PRINT           reduce using rule 2 (instructions -> instructions instruction .)
    RETURN          reduce using rule 2 (instructions -> instructions instruction .)
    ID              reduce using rule 2 (instructions -> instructions instruction .)
    $end            reduce using rule 2 (instructions -> instructions instruction .)
    }               reduce using rule 2 (instructions -> instructions instruction .)


state 4

    (4) instruction -> { . instructions }
    (2) instructions -> . instructions instruction
    (3) instructions -> .

    }               reduce using rule 3 (instructions -> .)
    {               reduce using rule 3 (instructions -> .)
    BREAK           reduce using rule 3 (instructions -> .)
    CONTINUE        reduce using rule 3 (instructions -> .)
    IF              reduce using rule 3 (instructions -> .)
    FOR             reduce using rule 3 (instructions -> .)
    WHILE           reduce using rule 3 (instructions -> .)
    PRINT           reduce using rule 3 (instructions -> .)
    RETURN          reduce using rule 3 (instructions -> .)
    ID              reduce using rule 3 (instructions -> .)

    instructions                   shift and go to state 19

state 5

    (5) instruction -> BREAK . ;

    ;               shift and go to state 20


state 6

    (6) instruction -> CONTINUE . ;

    ;               shift and go to state 21


state 7

    (7) instruction -> assignment . ;

    ;               shift and go to state 22


state 8

    (8) instruction -> instruction_if .

    {               reduce using rule 8 (instruction -> instruction_if .)
    BREAK           reduce using rule 8 (instruction -> instruction_if .)
    CONTINUE        reduce using rule 8 (instruction -> instruction_if .)
    IF              reduce using rule 8 (instruction -> instruction_if .)
    FOR             reduce using rule 8 (instruction -> instruction_if .)
    WHILE           reduce using rule 8 (instruction -> instruction_if .)
    PRINT           reduce using rule 8 (instruction -> instruction_if .)
    RETURN          reduce using rule 8 (instruction -> instruction_if .)
    ID              reduce using rule 8 (instruction -> instruction_if .)
    $end            reduce using rule 8 (instruction -> instruction_if .)
    }               reduce using rule 8 (instruction -> instruction_if .)
    ELSE            reduce using rule 8 (instruction -> instruction_if .)


state 9

    (9) instruction -> instruction_loop .

    {               reduce using rule 9 (instruction -> instruction_loop .)
    BREAK           reduce using rule 9 (instruction -> instruction_loop .)
    CONTINUE        reduce using rule 9 (instruction -> instruction_loop .)
    IF              reduce using rule 9 (instruction -> instruction_loop .)
    FOR             reduce using rule 9 (instruction -> instruction_loop .)
    WHILE           reduce using rule 9 (instruction -> instruction_loop .)
    PRINT           reduce using rule 9 (instruction -> instruction_loop .)
    RETURN          reduce using rule 9 (instruction -> instruction_loop .)
    ID              reduce using rule 9 (instruction -> instruction_loop .)
    $end            reduce using rule 9 (instruction -> instruction_loop .)
    }               reduce using rule 9 (instruction -> instruction_loop .)
    ELSE            reduce using rule 9 (instruction -> instruction_loop .)


state 10

    (10) instruction -> instruction_print . ;

    ;               shift and go to state 23


state 11

    (11) instruction -> instruction_return . ;

    ;               shift and go to state 24


state 12

    (12) assignment -> identifier . = operations
    (13) assignment -> identifier . ADDITION_ASSIGN operations
    (14) assignment -> identifier . MULTIPLICATION_ASSIGN operations
    (15) assignment -> identifier . SUBTRACTION_ASSIGN operations
    (16) assignment -> identifier . DIVISION_ASSIGN operations

    =               shift and go to state 25
    ADDITION_ASSIGN shift and go to state 26
    MULTIPLICATION_ASSIGN shift and go to state 27
    SUBTRACTION_ASSIGN shift and go to state 28
    DIVISION_ASSIGN shift and go to state 29


state 13

    (17) instruction_if -> IF . ( condition ) instruction
    (18) instruction_if -> IF . ( condition ) instruction ELSE instruction

    (               shift and go to state 30


state 14

    (19) instruction_loop -> FOR . identifier = operations : operations instruction
    (51) identifier -> . ID
    (52) identifier -> . ID [ operations_list ]

    ID              shift and go to state 18

    identifier                     shift and go to state 31

state 15

    (20) instruction_loop -> WHILE . ( condition ) instruction

    (               shift and go to state 32


state 16

    (21) instruction_print -> PRINT . operations_list
    (54) operations_list -> . operations_list , operations
    (55) operations_list -> . operations
    (25) operations -> . ( operations )
    (26) operations -> . operations + operations
    (27) operations -> . operations - operations
    (28) operations -> . operations * operations
    (29) operations -> . operations / operations
    (30) operations -> . operations > operations
    (31) operations -> . operations < operations
    (32) operations -> . operations GREATER_OR_EQUAL operations
    (33) operations -> . operations LESS_OR_EQUAL operations
    (34) operations -> . operations NOT_EQUAL operations
    (35) operations -> . operations EQUAL operations
    (36) operations -> . operations PLUS_MATRIX operations
    (37) operations -> . operations MINUS_MATRIX operations
    (38) operations -> . operations MULTIPLY_MATRIX operations
    (39) operations -> . operations DIVIDE_MATRIX operations
    (40) operations -> . operations '
    (41) operations -> . array
    (42) operations -> . value
    (43) operations -> . - operations
    (53) array -> . [ operations_list ]
    (44) value -> . FLOAT
    (45) value -> . INT
    (46) value -> . STRING
    (47) value -> . ZEROS ( operations_list )
    (48) value -> . ONES ( operations_list )
    (49) value -> . EYE ( operations_list )
    (50) value -> . identifier
    (51) identifier -> . ID
    (52) identifier -> . ID [ operations_list ]

    (               shift and go to state 35
    -               shift and go to state 36
    [               shift and go to state 39
    FLOAT           shift and go to state 40
    INT             shift and go to state 41
    STRING          shift and go to state 42
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45
    ID              shift and go to state 18

    operations_list                shift and go to state 33
    operations                     shift and go to state 34
    array                          shift and go to state 37
    value                          shift and go to state 38
    identifier                     shift and go to state 46

state 17

    (22) instruction_return -> RETURN . operations
    (23) instruction_return -> RETURN .
    (25) operations -> . ( operations )
    (26) operations -> . operations + operations
    (27) operations -> . operations - operations
    (28) operations -> . operations * operations
    (29) operations -> . operations / operations
    (30) operations -> . operations > operations
    (31) operations -> . operations < operations
    (32) operations -> . operations GREATER_OR_EQUAL operations
    (33) operations -> . operations LESS_OR_EQUAL operations
    (34) operations -> . operations NOT_EQUAL operations
    (35) operations -> . operations EQUAL operations
    (36) operations -> . operations PLUS_MATRIX operations
    (37) operations -> . operations MINUS_MATRIX operations
    (38) operations -> . operations MULTIPLY_MATRIX operations
    (39) operations -> . operations DIVIDE_MATRIX operations
    (40) operations -> . operations '
    (41) operations -> . array
    (42) operations -> . value
    (43) operations -> . - operations
    (53) array -> . [ operations_list ]
    (44) value -> . FLOAT
    (45) value -> . INT
    (46) value -> . STRING
    (47) value -> . ZEROS ( operations_list )
    (48) value -> . ONES ( operations_list )
    (49) value -> . EYE ( operations_list )
    (50) value -> . identifier
    (51) identifier -> . ID
    (52) identifier -> . ID [ operations_list ]

    ;               reduce using rule 23 (instruction_return -> RETURN .)
    (               shift and go to state 35
    -               shift and go to state 36
    [               shift and go to state 39
    FLOAT           shift and go to state 40
    INT             shift and go to state 41
    STRING          shift and go to state 42
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45
    ID              shift and go to state 18

    operations                     shift and go to state 47
    array                          shift and go to state 37
    value                          shift and go to state 38
    identifier                     shift and go to state 46

state 18

    (51) identifier -> ID .
    (52) identifier -> ID . [ operations_list ]

    =               reduce using rule 51 (identifier -> ID .)
    ADDITION_ASSIGN reduce using rule 51 (identifier -> ID .)
    MULTIPLICATION_ASSIGN reduce using rule 51 (identifier -> ID .)
    SUBTRACTION_ASSIGN reduce using rule 51 (identifier -> ID .)
    DIVISION_ASSIGN reduce using rule 51 (identifier -> ID .)
    +               reduce using rule 51 (identifier -> ID .)
    -               reduce using rule 51 (identifier -> ID .)
    *               reduce using rule 51 (identifier -> ID .)
    /               reduce using rule 51 (identifier -> ID .)
    >               reduce using rule 51 (identifier -> ID .)
    <               reduce using rule 51 (identifier -> ID .)
    GREATER_OR_EQUAL reduce using rule 51 (identifier -> ID .)
    LESS_OR_EQUAL   reduce using rule 51 (identifier -> ID .)
    NOT_EQUAL       reduce using rule 51 (identifier -> ID .)
    EQUAL           reduce using rule 51 (identifier -> ID .)
    PLUS_MATRIX     reduce using rule 51 (identifier -> ID .)
    MINUS_MATRIX    reduce using rule 51 (identifier -> ID .)
    MULTIPLY_MATRIX reduce using rule 51 (identifier -> ID .)
    DIVIDE_MATRIX   reduce using rule 51 (identifier -> ID .)
    '               reduce using rule 51 (identifier -> ID .)
    ,               reduce using rule 51 (identifier -> ID .)
    ;               reduce using rule 51 (identifier -> ID .)
    )               reduce using rule 51 (identifier -> ID .)
    ]               reduce using rule 51 (identifier -> ID .)
    :               reduce using rule 51 (identifier -> ID .)
    {               reduce using rule 51 (identifier -> ID .)
    BREAK           reduce using rule 51 (identifier -> ID .)
    CONTINUE        reduce using rule 51 (identifier -> ID .)
    IF              reduce using rule 51 (identifier -> ID .)
    FOR             reduce using rule 51 (identifier -> ID .)
    WHILE           reduce using rule 51 (identifier -> ID .)
    PRINT           reduce using rule 51 (identifier -> ID .)
    RETURN          reduce using rule 51 (identifier -> ID .)
    ID              reduce using rule 51 (identifier -> ID .)
    [               shift and go to state 48


state 19

    (4) instruction -> { instructions . }
    (2) instructions -> instructions . instruction
    (4) instruction -> . { instructions }
    (5) instruction -> . BREAK ;
    (6) instruction -> . CONTINUE ;
    (7) instruction -> . assignment ;
    (8) instruction -> . instruction_if
    (9) instruction -> . instruction_loop
    (10) instruction -> . instruction_print ;
    (11) instruction -> . instruction_return ;
    (12) assignment -> . identifier = operations
    (13) assignment -> . identifier ADDITION_ASSIGN operations
    (14) assignment -> . identifier MULTIPLICATION_ASSIGN operations
    (15) assignment -> . identifier SUBTRACTION_ASSIGN operations
    (16) assignment -> . identifier DIVISION_ASSIGN operations
    (17) instruction_if -> . IF ( condition ) instruction
    (18) instruction_if -> . IF ( condition ) instruction ELSE instruction
    (19) instruction_loop -> . FOR identifier = operations : operations instruction
    (20) instruction_loop -> . WHILE ( condition ) instruction
    (21) instruction_print -> . PRINT operations_list
    (22) instruction_return -> . RETURN operations
    (23) instruction_return -> . RETURN
    (51) identifier -> . ID
    (52) identifier -> . ID [ operations_list ]

    }               shift and go to state 49
    {               shift and go to state 4
    BREAK           shift and go to state 5
    CONTINUE        shift and go to state 6
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 17
    ID              shift and go to state 18

    instruction                    shift and go to state 3
    assignment                     shift and go to state 7
    instruction_if                 shift and go to state 8
    instruction_loop               shift and go to state 9
    instruction_print              shift and go to state 10
    instruction_return             shift and go to state 11
    identifier                     shift and go to state 12

state 20

    (5) instruction -> BREAK ; .

    {               reduce using rule 5 (instruction -> BREAK ; .)
    BREAK           reduce using rule 5 (instruction -> BREAK ; .)
    CONTINUE        reduce using rule 5 (instruction -> BREAK ; .)
    IF              reduce using rule 5 (instruction -> BREAK ; .)
    FOR             reduce using rule 5 (instruction -> BREAK ; .)
    WHILE           reduce using rule 5 (instruction -> BREAK ; .)
    PRINT           reduce using rule 5 (instruction -> BREAK ; .)
    RETURN          reduce using rule 5 (instruction -> BREAK ; .)
    ID              reduce using rule 5 (instruction -> BREAK ; .)
    $end            reduce using rule 5 (instruction -> BREAK ; .)
    }               reduce using rule 5 (instruction -> BREAK ; .)
    ELSE            reduce using rule 5 (instruction -> BREAK ; .)


state 21

    (6) instruction -> CONTINUE ; .

    {               reduce using rule 6 (instruction -> CONTINUE ; .)
    BREAK           reduce using rule 6 (instruction -> CONTINUE ; .)
    CONTINUE        reduce using rule 6 (instruction -> CONTINUE ; .)
    IF              reduce using rule 6 (instruction -> CONTINUE ; .)
    FOR             reduce using rule 6 (instruction -> CONTINUE ; .)
    WHILE           reduce using rule 6 (instruction -> CONTINUE ; .)
    PRINT           reduce using rule 6 (instruction -> CONTINUE ; .)
    RETURN          reduce using rule 6 (instruction -> CONTINUE ; .)
    ID              reduce using rule 6 (instruction -> CONTINUE ; .)
    $end            reduce using rule 6 (instruction -> CONTINUE ; .)
    }               reduce using rule 6 (instruction -> CONTINUE ; .)
    ELSE            reduce using rule 6 (instruction -> CONTINUE ; .)


state 22

    (7) instruction -> assignment ; .

    {               reduce using rule 7 (instruction -> assignment ; .)
    BREAK           reduce using rule 7 (instruction -> assignment ; .)
    CONTINUE        reduce using rule 7 (instruction -> assignment ; .)
    IF              reduce using rule 7 (instruction -> assignment ; .)
    FOR             reduce using rule 7 (instruction -> assignment ; .)
    WHILE           reduce using rule 7 (instruction -> assignment ; .)
    PRINT           reduce using rule 7 (instruction -> assignment ; .)
    RETURN          reduce using rule 7 (instruction -> assignment ; .)
    ID              reduce using rule 7 (instruction -> assignment ; .)
    $end            reduce using rule 7 (instruction -> assignment ; .)
    }               reduce using rule 7 (instruction -> assignment ; .)
    ELSE            reduce using rule 7 (instruction -> assignment ; .)


state 23

    (10) instruction -> instruction_print ; .

    {               reduce using rule 10 (instruction -> instruction_print ; .)
    BREAK           reduce using rule 10 (instruction -> instruction_print ; .)
    CONTINUE        reduce using rule 10 (instruction -> instruction_print ; .)
    IF              reduce using rule 10 (instruction -> instruction_print ; .)
    FOR             reduce using rule 10 (instruction -> instruction_print ; .)
    WHILE           reduce using rule 10 (instruction -> instruction_print ; .)
    PRINT           reduce using rule 10 (instruction -> instruction_print ; .)
    RETURN          reduce using rule 10 (instruction -> instruction_print ; .)
    ID              reduce using rule 10 (instruction -> instruction_print ; .)
    $end            reduce using rule 10 (instruction -> instruction_print ; .)
    }               reduce using rule 10 (instruction -> instruction_print ; .)
    ELSE            reduce using rule 10 (instruction -> instruction_print ; .)


state 24

    (11) instruction -> instruction_return ; .

    {               reduce using rule 11 (instruction -> instruction_return ; .)
    BREAK           reduce using rule 11 (instruction -> instruction_return ; .)
    CONTINUE        reduce using rule 11 (instruction -> instruction_return ; .)
    IF              reduce using rule 11 (instruction -> instruction_return ; .)
    FOR             reduce using rule 11 (instruction -> instruction_return ; .)
    WHILE           reduce using rule 11 (instruction -> instruction_return ; .)
    PRINT           reduce using rule 11 (instruction -> instruction_return ; .)
    RETURN          reduce using rule 11 (instruction -> instruction_return ; .)
    ID              reduce using rule 11 (instruction -> instruction_return ; .)
    $end            reduce using rule 11 (instruction -> instruction_return ; .)
    }               reduce using rule 11 (instruction -> instruction_return ; .)
    ELSE            reduce using rule 11 (instruction -> instruction_return ; .)


state 25

    (12) assignment -> identifier = . operations
    (25) operations -> . ( operations )
    (26) operations -> . operations + operations
    (27) operations -> . operations - operations
    (28) operations -> . operations * operations
    (29) operations -> . operations / operations
    (30) operations -> . operations > operations
    (31) operations -> . operations < operations
    (32) operations -> . operations GREATER_OR_EQUAL operations
    (33) operations -> . operations LESS_OR_EQUAL operations
    (34) operations -> . operations NOT_EQUAL operations
    (35) operations -> . operations EQUAL operations
    (36) operations -> . operations PLUS_MATRIX operations
    (37) operations -> . operations MINUS_MATRIX operations
    (38) operations -> . operations MULTIPLY_MATRIX operations
    (39) operations -> . operations DIVIDE_MATRIX operations
    (40) operations -> . operations '
    (41) operations -> . array
    (42) operations -> . value
    (43) operations -> . - operations
    (53) array -> . [ operations_list ]
    (44) value -> . FLOAT
    (45) value -> . INT
    (46) value -> . STRING
    (47) value -> . ZEROS ( operations_list )
    (48) value -> . ONES ( operations_list )
    (49) value -> . EYE ( operations_list )
    (50) value -> . identifier
    (51) identifier -> . ID
    (52) identifier -> . ID [ operations_list ]

    (               shift and go to state 35
    -               shift and go to state 36
    [               shift and go to state 39
    FLOAT           shift and go to state 40
    INT             shift and go to state 41
    STRING          shift and go to state 42
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45
    ID              shift and go to state 18

    identifier                     shift and go to state 46
    operations                     shift and go to state 50
    array                          shift and go to state 37
    value                          shift and go to state 38

state 26

    (13) assignment -> identifier ADDITION_ASSIGN . operations
    (25) operations -> . ( operations )
    (26) operations -> . operations + operations
    (27) operations -> . operations - operations
    (28) operations -> . operations * operations
    (29) operations -> . operations / operations
    (30) operations -> . operations > operations
    (31) operations -> . operations < operations
    (32) operations -> . operations GREATER_OR_EQUAL operations
    (33) operations -> . operations LESS_OR_EQUAL operations
    (34) operations -> . operations NOT_EQUAL operations
    (35) operations -> . operations EQUAL operations
    (36) operations -> . operations PLUS_MATRIX operations
    (37) operations -> . operations MINUS_MATRIX operations
    (38) operations -> . operations MULTIPLY_MATRIX operations
    (39) operations -> . operations DIVIDE_MATRIX operations
    (40) operations -> . operations '
    (41) operations -> . array
    (42) operations -> . value
    (43) operations -> . - operations
    (53) array -> . [ operations_list ]
    (44) value -> . FLOAT
    (45) value -> . INT
    (46) value -> . STRING
    (47) value -> . ZEROS ( operations_list )
    (48) value -> . ONES ( operations_list )
    (49) value -> . EYE ( operations_list )
    (50) value -> . identifier
    (51) identifier -> . ID
    (52) identifier -> . ID [ operations_list ]

    (               shift and go to state 35
    -               shift and go to state 36
    [               shift and go to state 39
    FLOAT           shift and go to state 40
    INT             shift and go to state 41
    STRING          shift and go to state 42
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45
    ID              shift and go to state 18

    identifier                     shift and go to state 46
    operations                     shift and go to state 51
    array                          shift and go to state 37
    value                          shift and go to state 38

state 27

    (14) assignment -> identifier MULTIPLICATION_ASSIGN . operations
    (25) operations -> . ( operations )
    (26) operations -> . operations + operations
    (27) operations -> . operations - operations
    (28) operations -> . operations * operations
    (29) operations -> . operations / operations
    (30) operations -> . operations > operations
    (31) operations -> . operations < operations
    (32) operations -> . operations GREATER_OR_EQUAL operations
    (33) operations -> . operations LESS_OR_EQUAL operations
    (34) operations -> . operations NOT_EQUAL operations
    (35) operations -> . operations EQUAL operations
    (36) operations -> . operations PLUS_MATRIX operations
    (37) operations -> . operations MINUS_MATRIX operations
    (38) operations -> . operations MULTIPLY_MATRIX operations
